--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,13 +1,32 @@
-.header {
+.headerHome {
 	width: 100%;
 	height: 60px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	&__logo {
+		width: 50%;
+		height: 50%;
+	}
 }
 
-.header__logo {
-	width: 50%;
-	height: 50%;
+.headerMenu {
+	width: 100%;
+	height: 60px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	&__logo {
+		width: 50%;
+		height: 50%;
+	}
+	&__link {
+		color: $font-color-2;
+	}
+	&__arrow {
+		position: relative;
+		right: 50px;
+	}
 }
